force-app/main/default/objects/copado__Test_Script__c/fields/Long_Test_Description__c.field-meta.xml
<CustomField>
    <fullName>Long_Test_Description__c</fullName>
    <label>Long Test Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>