force-app/main/default/objects/copado__Test_Script__c/fields/Selenium_Test_Case__c.field-meta.xml
<CustomField>
    <fullName>Selenium_Test_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Selenium Test Case</label>
    <referenceTo>copado__Selenium_Test_Case__c</referenceTo>
    <relationshipLabel>Test Scripts</relationshipLabel>
    <relationshipName>Test_Scripts</relationshipName>
    <type>Lookup</type>
</CustomField>